search result and phone details added

--- a/index.html
+++ b/index.html
@@ -18,6 +18,55 @@
 <body>
 
 
+    <!-- Input filed start  -->
+
+    <h2 class="text-center">Find Your Favorite Phone</h2>
+    <div class="input-group mb-3 text-center mx-auto w-50">
+        <input id="search-field" type="text" class="form-control" placeholder="Enter Phone Name" aria-label="Phone Name"
+            aria-describedby="button-addon2">
+        <button onclick="searchPhone()" class="btn btn-outline-secondary" type="button"
+            id="button-search">Search</button>
+    </div>
+
+    <!-- Input filed End  -->
+
+
+
+    <!-- display phone full details -->
+    <div id="phone-details" class="w-50 mx-auto">
+        <!-- <div class=" col">
+            <div class="card h-100">
+
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text text-center">This is a longer card with supporting text below as a natural
+                        lead-in to
+                        additional content. This content is a little bit longer.</p>
+                </div>
+            </div>
+        </div> -->
+
+    </div>
+
+
+
+    <!-- Display Phone result-->
+    <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4 mx-auto">
+        <!-- <div class=" col">
+        <div class="card h-100">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text text-center">This is a longer card with supporting text below as a natural
+                    lead-in to
+                    additional content. This content is a little bit longer.</p>
+            </div>
+        </div>
+    </div> -->
+
+    </div>
+
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
