--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <!-- boostrap Link  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="style.css">
     <title>Phone Finder</title>
+
+
 
 
 </head>
@@ -30,6 +32,8 @@
 
     <!-- Input filed End  -->
 
+    <!-- #error result -->
+    <h4 id="error-result" class="text-danger w-50 mx-auto text-center">Phone not available</h4>
 
 
     <!-- display phone full details -->
