Design Updated for mobile and desktop

--- a/index.html
+++ b/index.html
@@ -23,37 +23,26 @@
     <section class="container">
         <!-- Input filed start  -->
 
-        <h2 class="text-center">Find Your Favorite Phone</h2>
-        <div class="input-group mb-3 text-center mx-auto w-50">
+        <h2 class="text-center m-5">Find Your Favorite Phone</h2>
+        <div class="input-group mb-3 text-center mx-auto w-50 ">
             <input id="search-field" type="text" class="form-control" placeholder="Enter Phone Name"
                 aria-label="Phone Name" aria-describedby="button-addon2">
-            <button onclick="searchPhone()" class="btn btn-outline-secondary" type="button"
-                id="button-search">Search</button>
+            <button onclick="searchPhone()" class="btn btn-primary" type="button" id="button-search">Search</button>
         </div>
 
         <!-- Input filed End  -->
 
-        <!-- #error result -->
+        <!-- error result -->
         <h4 id="error-result" class="text-danger w-50 mx-auto text-center">Phone not Available</h4>
 
+        <!-- Empty error result -->
         <h4 id="error-empty" class="text-danger w-50 mx-auto text-center">Please write Something</h4>
 
 
 
-
         <!-- display phone full details -->
-        <div id="phone-details" class="my-2 col-lg-6 col-sm-12 mx-auto ">
-            <!-- <div class=" col">
-            <div class="card h-100">
+        <div id="phone-details" class="my-2 col-lg-6 col-sm-12 mx-auto mt-5 ">
 
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text text-center">This is a longer card with supporting text below as a natural
-                        lead-in to
-                        additional content. This content is a little bit longer.</p>
-                </div>
-            </div>
-        </div> -->
 
         </div>
 
@@ -61,17 +50,7 @@
 
         <!-- Display Phone result-->
         <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4 mx-auto">
-            <!-- <div class=" col">
-        <div class="card h-100">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text text-center">This is a longer card with supporting text below as a natural
-                    lead-in to
-                    additional content. This content is a little bit longer.</p>
-            </div>
-        </div>
-    </div> -->
+
 
         </div>
 
