--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section class="container">
         <!-- Input filed start  -->
 
-        <h2 class="text-center m-5">Find Your Favorite Phone</h2>
+        <h2 class="text-center m-5">Find Your <span class="text-primary">Favorite Phone</span></h2>
         <div class="input-group mb-3 text-center mx-auto w-50 ">
             <input id="search-field" type="text" class="form-control" placeholder="Enter Phone Name"
                 aria-label="Phone Name" aria-describedby="button-addon2">
@@ -39,13 +39,11 @@
         <h4 id="error-empty" class="text-danger w-50 mx-auto text-center">Please write Something</h4>
 
 
-
         <!-- display phone full details -->
         <div id="phone-details" class="my-2 col-lg-6 col-sm-12 mx-auto mt-5 ">
 
 
         </div>
-
 
 
         <!-- Display Phone result-->
@@ -55,11 +53,6 @@
         </div>
 
     </section>
-
-
-
-
-
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
