--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
 
-    <section class="container">
+    <section class="container my-5">
         <!-- Input filed start  -->
 
         <h2 class="text-center m-5">Find Your <span class="text-primary">Favorite Phone</span></h2>
